# whispercatcher

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements.txt.txt
apks/: README.md
src/: binary_infer.py  config.py  system_traffic_blacklist.txt  utils.py  whispercatcher.py
src/hookscript/: bypass.js  network_related_with_params.js  origin.js
src/instrumentation/: data_extractor.py
src/llm/: category_name_mapping.py  llm_query.py  privacy_extractor.py  traffic_splitter.py
src/static_analyzer/: key_apis_extractor.py  traffic_keywords_extractor.py
src/static_analyzer/soot_analyzer/: pom.xml
src/static_analyzer/soot_analyzer/src/main/java/Analyzer/: Application.java  EncryptionAnalysisProcessor.java  Executor.java  MethodPattern.java  PreProcessor.java  SetupApplication.java  SootClient.java
src/static_analyzer/soot_analyzer/src/main/java/Analyzer/Deserialization/: ApkTrafficKeywordsInfo.java  TrafficInfo.java
src/static_analyzer/soot_analyzer/src/main/java/Analyzer/Representation/: Edge.java  MethodParser.java  MethodParserSerializer.java  MethodParserWithDepth.java  ResultCell.java
src/static_analyzer/soot_analyzer/src/main/java/Analyzer/Utils/: FileIOUtils.java  StringUtils.java
src/traffic/: capture_traffic.py  httpdump.py
test/: extract_system_traffic_domains.py  remove_non_apks.py  rename_xapk.py
